hphp/test/zend/bad/ext/zlib/tests/gzencode_variation2-win32.php.skipif
<?php 

if( substr(PHP_OS, 0, 3) != "WIN" ) {
  die("skip.. only for Windows");
}

if (!extension_loaded("zlib")) {
	print "skip - ZLIB extension not loaded"; 
}	 
?> 